Add mock obj