@@ -15,7 +15,6 @@ package pascal.taie.ir.exp;
 import pascal.taie.ir.proginfo.MethodRef;
 import pascal.taie.util.collection.ListUtils;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -37,7 +36,7 @@ public abstract class InvokeInstanceExp extends InvokeExp {
 
     @Override
     public List<Exp> getUses() {
-        return ListUtils.cons(base, Collections.unmodifiableList(args));
+        return ListUtils.cons(base, List.copyOf(args));
     }
 
     @Override
